# routes/redirect-url.routes.ts
@@ -1,8 +1,8 @@
-import { getRedirectUrl } from "../controller/url-short.controller";
-import { Router } from "express";
+import { getRedirectUrl } from '../controller/url-short.controller';
+import { Router } from 'express';
 
 const router = Router();
 
-router.get("/:customAlias", getRedirectUrl);
+router.get('/:customAlias', getRedirectUrl);
 
 export default router;
