# routes/url.routes.ts
@@ -3,16 +3,16 @@ import {
   updateShortUrlByID,
   getAllShortUrls,
   getUrlShortByCustomAlias,
-  deleteShortUrlByID,
-} from "../controller/url-short.controller";
-import { Router } from "express";
+  deleteShortUrlByID
+} from '../controller/url-short.controller';
+import { Router } from 'express';
 
 const router = Router();
 
-router.get("/", getAllShortUrls);
-router.get("/:customAlias", getUrlShortByCustomAlias);
-router.put("/:ID", updateShortUrlByID);
-router.post("/", createShortUrl);
-router.delete("/:ID", deleteShortUrlByID);
+router.get('/', getAllShortUrls);
+router.get('/:customAlias', getUrlShortByCustomAlias);
+router.put('/:ID', updateShortUrlByID);
+router.post('/', createShortUrl);
+router.delete('/:ID', deleteShortUrlByID);
 
 export default router;
